; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/powermac/extr_kiic.c_kiic_readreg.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/powermac/extr_kiic.c_kiic_readreg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kiic_softc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kiic_softc*, i32)* @kiic_readreg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kiic_readreg(%struct.kiic_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.kiic_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.kiic_softc* %0, %struct.kiic_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.kiic_softc*, %struct.kiic_softc** %3, align 8
  %6 = getelementptr inbounds %struct.kiic_softc, %struct.kiic_softc* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.kiic_softc*, %struct.kiic_softc** %3, align 8
  %9 = getelementptr inbounds %struct.kiic_softc, %struct.kiic_softc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %4, align 4
  %12 = mul nsw i32 %10, %11
  %13 = call i32 @bus_read_4(i32 %7, i32 %12)
  %14 = and i32 %13, 255
  ret i32 %14
}

declare dso_local i32 @bus_read_4(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
